--- a/app.json
+++ b/app.json
@@ -29,14 +29,16 @@
       "permissions": [],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.template.app"
+      "package": "com.template.app",
+      "usesCleartextTraffic": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-router",
-      "expo-localization"
+      "expo-localization",
+      "expo-sqlite"
     ],
     "extra": {
       "router": {},
