--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-linking": "~8.0.11",
     "expo-localization": "~17.0.8",
     "expo-router": "~6.0.22",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "i18n-js": "^4.5.1",
     "react": "19.1.0",
